# hagaki-renderer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  app.service  bench.py  bench_single.py  generate_hash.py  go.mod  main.go  test.md
config/: card.go
logger/: logger.go
render/: card.go  color.go
route/render/: card.go
src/: config.rs  main.rs  models.rs  utils.rs
src/handlers/: mod.rs  render_album.rs  render_card.rs  render_fan.rs  render_remove.rs
src/handlers/render/: album_handler.rs  card_handler.rs  fan_handler.rs  mod.rs
src/utils/: album_render.rs  card_render.rs  fan_render.rs  frame_loader.rs  mod.rs
