[package]
name = "hagaki"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
base64 = "0.22.1"
image = "0.25.5"
imageproc = "0.25.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_repr = "0.1.19"
tokio = { version = "1.42.0", features = ["fs", "io-util", "rt-multi-thread"] }

[profile.dev.package."*"]
opt-level = 3
