[package]
name = "hagaki"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
base64 = "0.22.1"
image = "0.25.5"
imageproc = "0.25.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_repr = "0.1.19"
tokio = { version = "1.42.0", features = ["fs", "io-util", "rt-multi-thread", "signal"] }
palette = "0.6"
log = "0.4.27"
pretty_env_logger = "0.5.0"

[profile.dev.package."*"]
opt-level = 3
